--- a/wordpress-volumes/wordpress-web.yml
+++ b/wordpress-volumes/wordpress-web.yml
@@ -19,7 +19,7 @@ spec:
       - name: wordpress
         image: wordpress:4-php7.0
         # uncomment to fix perm issue, see also https://github.com/kubernetes/kubernetes/issues/2630
-        # command: ['bash', '-c', 'mkdir -p /var/www/html/wp-content/uploads; chown www-data:www-data /var/www/html/wp-content/uploads && docker-entrypoint.sh apache2-foreground']
+        command: ['bash', '-c', 'mkdir -p /var/www/html/wp-content/uploads; chown www-data:www-data /var/www/html/wp-content/uploads && docker-entrypoint.sh apache2-foreground']
         ports:
         - name: http-port
           containerPort: 80
@@ -73,9 +73,9 @@ spec:
             value: wordpress-db
         volumeMounts:
         - mountPath: /var/www/html/wp-content/uploads
-          name: mypvc
+          name: nfspvc
       volumes:
-      - name: mypvc
+      - name: nfspvc
         persistentVolumeClaim:
           claimName: fileserver-claim
           
